--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,8 +1,8 @@
 <div class="container banner" id="teddymuller">
   <div class="picture-tm container">
-    <h1 class="banner__title">Hello! I'm Doriane.</h1>
-    <p class="banner__content">I love Design<br> Hard Work</p>
-    <a href="#contact" class="banner__link">Curious to know more?</a>
+    <h1 class="banner__title">Hello! I'm Doriane !</h1>
+    <p class="banner__content">Community Manager & Graphic Designer </p>
+    <a href="#about" class="banner__link">Curious to know more?</a>
   </div>
 </div>
 <div class="container service" id="service">
@@ -12,43 +12,43 @@
   <ul class="cards1">
     <li class="card1">
       <img src=" https://res.cloudinary.com/dezfv3vmn/image/upload/v1675959457/Doriane%20Chatelain/picto%20%28service%29/identite%CC%81_visuelle_ddqhgt.png" alt="" class="card1__img card1__img--full">
-      <h4 class="card1__title">Identités visuelles</h4>
-      <p>Création d’identités de marque fortes, reconnaissables et singulières. Déclinaisons multi-supports web et print</p>
+      <h4 class="card1__title">Social networks</h4>
+      <p>Creation and/or development of your social networks in order to help and accompany you, young companies and less young to develop yourself.</p>
     </li>
     <li class="card1">
       <img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675959457/Doriane%20Chatelain/picto%20%28service%29/print_g8hw36.png" alt="" class="card1__img card1__img--full">
-      <h4 class="card1__title">LadyBird</h4>
-      <p>Création d’identités de marque fortes, reconnaissables et singulières. Déclinaisons multi-supports web et print</p>
+      <h4 class="card1__title">Photography</h4>
+      <p>Use my passion for photography to highlight your product.</p>
     </li>
     <li class="card1">
       <a href="#" class="" target=""><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675959457/Doriane%20Chatelain/picto%20%28service%29/reseaux_sociaux_cnobni.png" alt="" class="card1__img card1__img--full"></a>
-      <h4 class="card1__title">LadyBird</h4>
-      <p>Création d’identités de marque fortes, reconnaissables et singulières. Déclinaisons multi-supports web et print</p>
+      <h4 class="card1__title">Translation</h4>
+      <p>Fluent in French, Spanish and English, I can be an important tool if you want to translate your website and reach a larger target.</p>
     </li>
     <li class="card1">
       <a href="#" class="" target=""><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675959458/Doriane%20Chatelain/picto%20%28service%29/redaction_xbefuk.png" alt="" class="card1__img card1__img--full"></a>
-      <h4 class="card1__title">LadyBird</h4>
-      <p>Création d’identités de marque fortes, reconnaissables et singulières. Déclinaisons multi-supports web et print</p>
+      <h4 class="card1__title">Print</h4>
+      <p>Creation of paper supports, from the business card, to the flyer through the display and the window sticker.</p>
     </li>
     <li class="card1">
       <a href="#" class="" target=""><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675959457/Doriane%20Chatelain/picto%20%28service%29/photos_oyspmy.png" alt="" class="card1__img card1__img--full"></a>
-      <h4 class="card1__title">LadyBird</h4>
-      <p>Création d’identités de marque fortes, reconnaissables et singulières. Déclinaisons multi-supports web et print</p>
+      <h4 class="card1__title">Visual Identity</h4>
+      <p>Creation of brand identity, graphic charter according to your values, your sector, your target…</p>
     </li>
     <li class="card1">
       <a href="#" class="" target=""><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675959458/Doriane%20Chatelain/picto%20%28service%29/video_ciqdlw.png" alt="" class="card1__img card1__img--full"></a>
-      <h4 class="card1__title">LadyBird</h4>
-      <p>Création d’identités de marque fortes, reconnaissables et singulières. Déclinaisons multi-supports web et print</p>
+      <h4 class="card1__title">Redaction</h4>
+      <p>The art and the way to highlight your brand through words.</p>
     </li>
     <li class="card1">
       <a href="#" class="" target=""><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675959456/Doriane%20Chatelain/picto%20%28service%29/evenementiel_m3uhuu.png" alt="" class="card1__img card1__img--full"></a>
-      <h4 class="card1__title">LadyBird</h4>
-      <p>Création d’identités de marque fortes, reconnaissables et singulières. Déclinaisons multi-supports web et print</p>
+      <h4 class="card1__title">Videography</h4>
+      <p>Highlighting your product or your place through a video for your networks will give a new dimension to your brand.</p>
     </li>
     <li class="card1">
       <a href="#" class="" target=""><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675959457/Doriane%20Chatelain/picto%20%28service%29/traduction_r9fagi.png" alt="" class="card1__img card1__img--full"></a>
-      <h4 class="card1__title">LadyBird</h4>
-      <p>Création d’identités de marque fortes, reconnaissables et singulières. Déclinaisons multi-supports web et print</p>
+      <h4 class="card1__title">Event</h4>
+      <p>Several years of experience, clients who trust me and a constant evolution of my work.</p>
     </li>
   </ul>
 </div>
