--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,7 +11,8 @@
       <button class="btn-menu"><i class="fa-sharp fa-solid fa-bars"></i></button>
         <ul class="menu">
           <li><a href="#service" class="bouton"><strong>Services</strong></a></li>
-          <li><a href="#realisation" class="bouton"><strong>Realisations</strong></a></li>
+          <li><a href="#realisation" class="bouton"><strong>Achievements</strong></a></li>
+          <li><a href="#" class="bouton"><strong>About me</strong></a></li>
           <li><a href="mailto:ladybirdbydc@gmail.com?subject=Contact WEBSITE" class="bouton"><strong>Contact</strong></a></li>
       </ul>
     </div>
