--- a/app/assets/stylesheets/components/_separation.scss
+++ b/app/assets/stylesheets/components/_separation.scss
@@ -1,4 +1,5 @@
 .separation{
+font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 background-color: #F7F3F4;
 height: 200px;
 display: flex;
