--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -48,12 +48,12 @@
     <li class="card1">
       <a href="#" class="" target=""><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675959457/Doriane%20Chatelain/picto%20%28service%29/traduction_r9fagi.png" alt="" class="card1__img card1__img--full"></a>
       <h4 class="card1__title">Event</h4>
-      <p>Several years of experience, clients who trust me and a constant evolution of my work.</p>
+      <p>From the small event to the big congress, I can be your shoulder to accompany you in the organization of your project.</p>
     </li>
   </ul>
 </div>
 <div class="container separation">
-  <p>"Une belle expérience de plus de 200 projets : logos & identités visuelles, sites Internet, applications mobiles et autres travaux graphiques"</p>
+  <p>"Several years of experience, clients who trust me and a constant evolution of my work."</p>
 </div>
 <div class="container realisation" id="realisation">
   <%# <h2 class="realisation__title">Réalisations</h2>
@@ -132,8 +132,17 @@
     </div>
   </div>
 </div>
+<div class="container aboutme" id="about">
+  <p>My name is Doriane, I am 26 years old and I am Franco-Spanish.
+    <br><br>
+    Since my birth I have been immersed in this double culture which allows me today to have an ease in languages ​​and a great open-mindedness.
+    <br><br>
+    After obtaining a degree in Communication Manager and then having worked in events for 4 years, I decided to stand on my own feet by using my know-how to help companies develop.
+  </p>
+
+</div>
 <div class="container separation" id="work">
-  <p>You have a project? Contact me on bottom</p>
+  <p>Do you have a project ? Let me know. </p>
   <%# <a href="https://www.malt.fr/profile/teddymuller" class="btn-malt" target="_blank">Malt!</a> %>
 </div>
 
