--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,7 @@
 @import "components/kindwords";
 @import "components/realisation";
 @import "components/footer";
+@import "components/aboutme";
 @import "pages/index";
 @import "pages/home";
 
