--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -99,15 +99,27 @@
   </ul>
   <div class="modal" id="modal" role="dialog">
     <div class="modal-content">
-      <%# <div class="modal-close" data-dismiss="dialog">
-        X
-      </div> %>
-      <div class="modal-header">
-        <p>Titre de la modale  1</p>
+
+      <div class="cardpage">
+        <p>TITLE</p>
+        <div class="swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1676190908/Doriane%20Chatelain/laverie/AFFICHE_PRECAUTION_hnbg8u.png" alt="" class="">
+            </div>
+            <div class="swiper-slide" id="">
+              <img src="" alt="" class="card__img card__img--full">
+            </div>
+            <div class="swiper-slide" id="">
+              <img src="" alt="" class="card__img card__img--full">
+            </div>
+          </div>
+            <div class="swiper-pagination"></div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+        </div>
       </div>
-      <div class="modal-body">
-        Une belle expérience de plus de 200 projets : logos & identités visuelles, sites Internet, applications mobiles et autres travaux graphiques.
-      </div>
+
       <div class="modal-footer">
         <a href="#0" class="btn btn-close" role="button" data-dismiss="dialog"></a>
         <%# <a href="#0" class="btn" role="button">valider</a>  %>
@@ -179,4 +191,24 @@
       });
     }
   }
+
+
+  //swiper
+const swiper = new Swiper('.swiper', {
+  // Optional parameters
+  // direction: 'vertical',
+  loop: true,
+
+  // pagination
+  pagination: {
+    el: '.swiper-pagination',
+  },
+
+  // Navigation arrows
+  navigation: {
+    nextEl: '.swiper-button-next',
+    prevEl: '.swiper-button-prev',
+  },
+});
+
 </script>
