--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,6 +15,8 @@
 @import "components/realisation";
 @import "components/footer";
 @import "components/aboutme";
+@import "components/modal";
+@import "components/swiper";
 @import "pages/index";
 @import "pages/home";
 
