--- a/app/assets/stylesheets/components/_modal.scss
+++ b/app/assets/stylesheets/components/_modal.scss
@@ -40,18 +40,18 @@
 }
 .modal-footer{
   padding: 10px;
-  // border-top: 1px solid #ddd;
+  border-top: #fbA8A8;
   background-color: #fbA8A8;
   text-align: right;
 }
 .btn{
   padding: 5px;
-  background-color: darkcyan;
+  background-color: red;
   color: white;
   text-decoration: none;
 }
 .btn-close{
-  background-color: red;
+  // background-color: red;
   color: white;
   text-decoration: none;
   padding: 5px;
