--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -101,17 +101,20 @@
     <div class="modal-content">
 
       <div class="cardpage">
-        <p>TITLE</p>
+        <p></p>
         <div class="swiper">
           <div class="swiper-wrapper">
             <div class="swiper-slide">
-              <img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1676190908/Doriane%20Chatelain/laverie/AFFICHE_PRECAUTION_hnbg8u.png" alt="" class="">
+              <img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1676198167/Doriane%20Chatelain/plaquettes/PLAQUETTE%20LAVERIE/1_muippj.png" alt="" class="">
             </div>
             <div class="swiper-slide" id="">
-              <img src="" alt="" class="card__img card__img--full">
+              <img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1676198166/Doriane%20Chatelain/plaquettes/PLAQUETTE%20LAVERIE/2_tipitp.png" alt="" class="">
             </div>
             <div class="swiper-slide" id="">
-              <img src="" alt="" class="card__img card__img--full">
+              <img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1676198167/Doriane%20Chatelain/plaquettes/PLAQUETTE%20LAVERIE/3_z3p5qb.png" alt="" class="">
+            </div>
+            <div class="swiper-slide">
+              <img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1676198167/Doriane%20Chatelain/plaquettes/PLAQUETTE%20LAVERIE/4_qtncmg.png" alt="" class="">
             </div>
           </div>
             <div class="swiper-pagination"></div>
@@ -122,7 +125,6 @@
 
       <div class="modal-footer">
         <a href="#0" class="btn btn-close" role="button" data-dismiss="dialog"></a>
-        <%# <a href="#0" class="btn" role="button">valider</a>  %>
       </div>
     </div>
   </div>
