--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -69,37 +69,36 @@
       <%# <h4 class="card__title"><a href="#" class="" target="_blank">LadyBird</a></h4> %>
     </li>
     <li class="card">
-      <a href="#0" class="" target="_blank"><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675957573/Doriane%20Chatelain/logo%20client%20%28realisation%29/AGENT_IMMO_gdea58.png" alt="" class="card__img card__img--full"></a>
+      <a href="#0" role="button" data-target="#modal3" data-toggle="modal"><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675957573/Doriane%20Chatelain/logo%20client%20%28realisation%29/AGENT_IMMO_gdea58.png" alt="" class="card__img card__img--full"></a>
       <%# <h4 class="card__title"><a href="#" class="" target="_blank">LadyBird</a></h4> %>
     </li>
     <li class="card">
-      <a href="#0" class="" target="_blank"><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675957573/Doriane%20Chatelain/logo%20client%20%28realisation%29/esteticista_j1um0y.png" alt="" class="card__img card__img--full"></a>
+      <a href="#0" role="button" data-target="#modal4" data-toggle="modal"><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675957573/Doriane%20Chatelain/logo%20client%20%28realisation%29/esteticista_j1um0y.png" alt="" class="card__img card__img--full"></a>
       <%# <h4 class="card__title"><a href="#" class="" target="_blank">LadyBird</a></h4> %>
     </li>
     <li class="card">
-      <a href="#0" class="" target="_blank"><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675957573/Doriane%20Chatelain/logo%20client%20%28realisation%29/LOGO_CAT_pjoujl.png" alt="" class="card__img card__img--full"></a>
+      <a href="#0" role="button" data-target="#modal5" data-toggle="modal"><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675957573/Doriane%20Chatelain/logo%20client%20%28realisation%29/LOGO_CAT_pjoujl.png" alt="" class="card__img card__img--full"></a>
       <%# <h4 class="card__title"><a href="#" class="" target="_blank">LadyBird</a></h4> %>
     </li>
     <li class="card">
-      <a href="#0" class="" target="_blank"><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675957573/Doriane%20Chatelain/logo%20client%20%28realisation%29/events2spain_ghvlu6.png" alt="" class="card__img card__img--full"></a>
+      <a href="#0" role="button" data-target="#modal6" data-toggle="modal"><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675957573/Doriane%20Chatelain/logo%20client%20%28realisation%29/events2spain_ghvlu6.png" alt="" class="card__img card__img--full"></a>
       <%# <h4 class="card__title"><a href="#" class="" target="_blank">LadyBird</a></h4> %>
     </li>
     <li class="card">
-      <a href="#0" class="" target="_blank"><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675957574/Doriane%20Chatelain/logo%20client%20%28realisation%29/reves_jox9ys.png" alt="" class="card__img card__img--full"></a>
+      <a href="#0" role="button" data-target="#modal7" data-toggle="modal"><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675957574/Doriane%20Chatelain/logo%20client%20%28realisation%29/reves_jox9ys.png" alt="" class="card__img card__img--full"></a>
       <%# <h4 class="card__title"><a href="#" class="" target="_blank">LadyBird</a></h4> %>
     </li>
     <li class="card">
-      <a href="#0" class="" target="_blank"><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675957574/Doriane%20Chatelain/logo%20client%20%28realisation%29/mcs_gcy06a.png" alt="" class="card__img card__img--full"></a>
+      <a href="#0" role="button" data-target="#modal8" data-toggle="modal"><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675957574/Doriane%20Chatelain/logo%20client%20%28realisation%29/mcs_gcy06a.png" alt="" class="card__img card__img--full"></a>
       <%# <h4 class="card__title"><a href="#" class="" target="_blank">LadyBird</a></h4> %>
     </li>
     <li class="card">
-      <a href="#0" class="" target="_blank"><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675957573/Doriane%20Chatelain/logo%20client%20%28realisation%29/4EVENT_ttvqdy.png" alt="" class="card__img card__img--full"></a>
+      <a href="#0" role="button" data-target="#modal9" data-toggle="modal"><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675957573/Doriane%20Chatelain/logo%20client%20%28realisation%29/4EVENT_ttvqdy.png" alt="" class="card__img card__img--full"></a>
       <%# <h4 class="card__title"><a href="#" class="" target="_blank">LadyBird</a></h4> %>
     </li>
   </ul>
   <div class="modal" id="modal" role="dialog">
     <div class="modal-content">
-
       <div class="cardpage">
         <p></p>
         <div class="swiper">
@@ -122,7 +121,6 @@
             <div class="swiper-button-next"></div>
         </div>
       </div>
-
       <div class="modal-footer">
         <a href="#0" class="btn btn-close" role="button" data-dismiss="dialog"></a>
       </div>
@@ -130,18 +128,27 @@
   </div>
   <div class="modal" id="modal2" role="dialog">
     <div class="modal-content">
-      <div class="modal-close" data-dismiss="dialog">
-        X
-      </div>
-      <div class="modal-header">
-        <p>Titre de la modale 2</p>
-      </div>
-      <div class="modal-body">
-        Une belle expérience avec divers partenaires : logos & identités visuelles, chartre graphique, flyeurs/affiches, réseaux sociaux, traduction et autres travaux graphiques...
+      <div class="cardpage">
+        <p></p>
+        <div class="swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1676198228/Doriane%20Chatelain/plaquettes/PLAQUETTE%20SAYM/1_sxuprp.png" alt="" class="">
+            </div>
+            <div class="swiper-slide" id="">
+              <img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1676198228/Doriane%20Chatelain/plaquettes/PLAQUETTE%20SAYM/2_ye6r5g.png" alt="" class="">
+            </div>
+            <div class="swiper-slide" id="">
+              <img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1676198228/Doriane%20Chatelain/plaquettes/PLAQUETTE%20SAYM/3_o3yyi5.png" alt="" class="">
+            </div>
+          </div>
+            <div class="swiper-pagination"></div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+        </div>
       </div>
       <div class="modal-footer">
         <a href="#0" class="btn btn-close" role="button" data-dismiss="dialog"></a>
-        <%# <a href="#0" class="btn" role="button">valider</a> %>
       </div>
     </div>
   </div>
