--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -152,6 +152,115 @@
       </div>
     </div>
   </div>
+  <div class="modal" id="modal3" role="dialog">
+    <div class="modal-content">
+      <div class="cardpage">
+        <p></p>
+        <div class="swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1676198133/Doriane%20Chatelain/plaquettes/PLAQUETTE%20IAD/1_ieu0vu.png" alt="" class="">
+            </div>
+            <div class="swiper-slide" id="">
+              <img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1676198133/Doriane%20Chatelain/plaquettes/PLAQUETTE%20IAD/2_axy3m2.png" alt="" class="">
+            </div>
+            <div class="swiper-slide" id="">
+              <img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1676198133/Doriane%20Chatelain/plaquettes/PLAQUETTE%20IAD/1_ieu0vu.png" alt="" class="">
+            </div>
+          </div>
+            <div class="swiper-pagination"></div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <a href="#0" class="btn btn-close" role="button" data-dismiss="dialog"></a>
+      </div>
+    </div>
+  </div>
+  <div class="modal" id="modal4" role="dialog">
+    <div class="modal-content">
+      <div class="cardpage">
+        <p></p>
+        <div class="swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1676198012/Doriane%20Chatelain/plaquettes/PLAQUETTE%20ESTHE%CC%81TIQUE/plaquette_esthetique_yun0fb.png" alt="" class="">
+            </div>
+          </div>
+            <div class="swiper-pagination"></div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <a href="#0" class="btn btn-close" role="button" data-dismiss="dialog"></a>
+      </div>
+    </div>
+  </div>
+  <div class="modal" id="modal5" role="dialog">
+    <div class="modal-content">
+      <div class="cardpage">
+        <p></p>
+        <div class="swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1676198038/Doriane%20Chatelain/plaquettes/PLAQUETTE%20CAT/1_ekaixz.png" alt="" class="">
+            </div>
+            <div class="swiper-slide">
+              <img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1676198038/Doriane%20Chatelain/plaquettes/PLAQUETTE%20CAT/2_zpfjlw.png" alt="" class="">
+            </div>
+          </div>
+            <div class="swiper-pagination"></div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <a href="#0" class="btn btn-close" role="button" data-dismiss="dialog"></a>
+      </div>
+    </div>
+  </div>
+  <div class="modal" id="modal6" role="dialog">
+    <div class="modal-content">
+      <div class="cardpage">
+        <p></p>
+        <div class="swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1676198113/Doriane%20Chatelain/plaquettes/PLAQUETTE%20EVENTS2SPAIN/plaquette_events2spain_ovrgzv.png" alt="" class="">
+            </div>
+          </div>
+            <div class="swiper-pagination"></div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <a href="#0" class="btn btn-close" role="button" data-dismiss="dialog"></a>
+      </div>
+    </div>
+  </div>
+  <div class="modal" id="modal7" role="dialog">
+    <div class="modal-content">
+      <div class="cardpage">
+        <p></p>
+        <div class="swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1676198197/Doriane%20Chatelain/plaquettes/PLAQUETTE%20REVES/plaquette_reves_q0vpfp.png" alt="" class="">
+            </div>
+          </div>
+            <div class="swiper-pagination"></div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <a href="#0" class="btn btn-close" role="button" data-dismiss="dialog"></a>
+      </div>
+    </div>
+  </div>
 </div>
 <div class="container aboutme" id="about">
   <p>My name is Doriane, I am 26 years old and I am Franco-Spanish.
