--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,18 +12,18 @@
   <ul class="cards1">
     <li class="card1">
       <img src=" https://res.cloudinary.com/dezfv3vmn/image/upload/v1675959457/Doriane%20Chatelain/picto%20%28service%29/identite%CC%81_visuelle_ddqhgt.png" alt="" class="card1__img card1__img--full">
-      <h4 class="card1__title">Social networks</h4>
-      <p>Creation and/or development of your social networks in order to help and accompany you, young companies and less young to develop yourself.</p>
+      <h4 class="card1__title">Visual Identity</h4>
+      <p>Creation of brand identity, graphic charter according to your values, your sector, your target…</p>
     </li>
     <li class="card1">
       <img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675959457/Doriane%20Chatelain/picto%20%28service%29/print_g8hw36.png" alt="" class="card1__img card1__img--full">
-      <h4 class="card1__title">Photography</h4>
-      <p>Use my passion for photography to highlight your product.</p>
+      <h4 class="card1__title">Print</h4>
+      <p>Creation of paper supports, from the business card, to the flyer through the display and the window sticker.</p>
     </li>
     <li class="card1">
       <a href="#" class="" target=""><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675959457/Doriane%20Chatelain/picto%20%28service%29/reseaux_sociaux_cnobni.png" alt="" class="card1__img card1__img--full"></a>
-      <h4 class="card1__title">Translation</h4>
-      <p>Fluent in French, Spanish and English, I can be an important tool if you want to translate your website and reach a larger target.</p>
+      <h4 class="card1__title">Social networks</h4>
+      <p>Creation and/or development of your social networks in order to help and accompany you, young companies and less young to develop yourself.</p>
     </li>
     <li class="card1">
       <a href="#" class="" target=""><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675959458/Doriane%20Chatelain/picto%20%28service%29/redaction_xbefuk.png" alt="" class="card1__img card1__img--full"></a>
@@ -32,23 +32,23 @@
     </li>
     <li class="card1">
       <a href="#" class="" target=""><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675959457/Doriane%20Chatelain/picto%20%28service%29/photos_oyspmy.png" alt="" class="card1__img card1__img--full"></a>
-      <h4 class="card1__title">Visual Identity</h4>
-      <p>Creation of brand identity, graphic charter according to your values, your sector, your target…</p>
+      <h4 class="card1__title">Photography</h4>
+      <p>Use my passion for photography to highlight your product.</p>
     </li>
     <li class="card1">
       <a href="#" class="" target=""><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675959458/Doriane%20Chatelain/picto%20%28service%29/video_ciqdlw.png" alt="" class="card1__img card1__img--full"></a>
-      <h4 class="card1__title">Redaction</h4>
-      <p>The art and the way to highlight your brand through words.</p>
-    </li>
-    <li class="card1">
-      <a href="#" class="" target=""><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675959456/Doriane%20Chatelain/picto%20%28service%29/evenementiel_m3uhuu.png" alt="" class="card1__img card1__img--full"></a>
       <h4 class="card1__title">Videography</h4>
       <p>Highlighting your product or your place through a video for your networks will give a new dimension to your brand.</p>
     </li>
     <li class="card1">
-      <a href="#" class="" target=""><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675959457/Doriane%20Chatelain/picto%20%28service%29/traduction_r9fagi.png" alt="" class="card1__img card1__img--full"></a>
+      <a href="#" class="" target=""><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675959456/Doriane%20Chatelain/picto%20%28service%29/evenementiel_m3uhuu.png" alt="" class="card1__img card1__img--full"></a>
       <h4 class="card1__title">Event</h4>
       <p>From the small event to the big congress, I can be your shoulder to accompany you in the organization of your project.</p>
+    </li>
+    <li class="card1">
+      <a href="#" class="" target=""><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675959457/Doriane%20Chatelain/picto%20%28service%29/traduction_r9fagi.png" alt="" class="card1__img card1__img--full"></a>
+      <h4 class="card1__title">Translation</h4>
+      <p>Fluent in French, Spanish and English, I can be an important tool if you want to translate your website and reach a larger target.</p>
     </li>
   </ul>
 </div>
