--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -27,8 +27,8 @@
     </li>
     <li class="card1">
       <a href="#" class="" target=""><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675959458/Doriane%20Chatelain/picto%20%28service%29/redaction_xbefuk.png" alt="" class="card1__img card1__img--full"></a>
-      <h4 class="card1__title">Print</h4>
-      <p>Creation of paper supports, from the business card, to the flyer through the display and the window sticker.</p>
+      <h4 class="card1__title">Redaction</h4>
+      <p>The art and the way to highlight your brand through words.</p>
     </li>
     <li class="card1">
       <a href="#" class="" target=""><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675959457/Doriane%20Chatelain/picto%20%28service%29/photos_oyspmy.png" alt="" class="card1__img card1__img--full"></a>
