--- a/app/assets/stylesheets/components/_service.scss
+++ b/app/assets/stylesheets/components/_service.scss
@@ -22,7 +22,7 @@ hr{
 }
 
 .cards1 {
-  font-family: "Proxima Nova", sans-serif;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   flex-grow: 1;
   display: grid;
   grid-gap: 30px;
@@ -85,13 +85,14 @@ hr{
       }
     }
     h4{
+      font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
       text-decoration: none;
-      font-size: 20px;
+      font-size: 22px;
       color: #000000;
     }
     p{
       text-align: center;
       padding: 10px;
-      font-size: 18px;
+      font-size: 16px;
     }
   }
