--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="container banner" id="teddymuller">
   <div class="picture-tm container">
-    <h1 class="banner__title">Hello! I'm Doriane !</h1>
+    <h1 class="banner__title">DORIANE CHATELAIN</h1>
     <p class="banner__content">Community Manager & Graphic Designer </p>
     <a href="#about" class="banner__link">Curious to know more?</a>
   </div>
