--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -10,10 +10,10 @@
     <div class="item item--menu">
       <button class="btn-menu"><i class="fa-sharp fa-solid fa-bars"></i></button>
         <ul class="menu">
-          <li><a href="#service" class="bouton"><strong>Services</strong></a></li>
-          <li><a href="#realisation" class="bouton"><strong>Achievements</strong></a></li>
-          <li><a href="#about" class="bouton"><strong>About me</strong></a></li>
-          <li><a href="mailto:ladybirdbydc@gmail.com?subject=Contact WEBSITE" class="bouton"><strong>Contact</strong></a></li>
+          <li><a href="#service" class="bouton"><strong>SERVICES</strong></a></li>
+          <li><a href="#realisation" class="bouton"><strong>ACHIEVEMENTS</strong></a></li>
+          <li><a href="#about" class="bouton"><strong>ABOUT ME</strong></a></li>
+          <li><a href="mailto:ladybirdbydc@gmail.com?subject=Contact WEBSITE" class="bouton"><strong>CONTACT</strong></a></li>
       </ul>
     </div>
     </div>
