--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,5 +1,5 @@
 .nav {
-  font-family: "Proxima Nova", sans-serif;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   display: flex;
   justify-content: space-between;
   padding: 20px 0 10px 0;
@@ -40,7 +40,7 @@
     margin-right: 30px;
     a{
       text-decoration: none;
-      font-size: 20px;
+      font-size: 18px;
       color: #B6D7E5;
       &:hover{
         transition: 400ms;
