--- a/app/assets/stylesheets/components/_aboutme.scss
+++ b/app/assets/stylesheets/components/_aboutme.scss
@@ -1,7 +1,10 @@
 .aboutme{
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  background-image: url(https://res.cloudinary.com/dezfv3vmn/image/upload/v1676219938/Doriane%20Chatelain/BANNIERE_wybgng.png);
+  background-repeat: no-repeat;
+  background-size: cover;
   background-color: #F7F3F4;
-  height: 200px;
+  // height: 200px;
   display: flex;
   justify-content: center;
   align-items: center;
