--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: space-between;
   padding: 20px 0 10px 0;
-  background-color: #F8F9FA;
+  background-color: #F7F3F4;
   z-index: 2;
 }
 .item-ted {
