--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -21,32 +21,32 @@
       <p>Creation of paper supports, from the business card, to the flyer through the display and the window sticker.</p>
     </li>
     <li class="card1">
-      <a href="#" class="" target=""><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675959457/Doriane%20Chatelain/picto%20%28service%29/reseaux_sociaux_cnobni.png" alt="" class="card1__img card1__img--full"></a>
+      <img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675959457/Doriane%20Chatelain/picto%20%28service%29/reseaux_sociaux_cnobni.png" alt="" class="card1__img card1__img--full"></a>
       <h4 class="card1__title">Social networks</h4>
       <p>Creation and/or development of your social networks in order to help and accompany you, young companies and less young to develop yourself.</p>
     </li>
     <li class="card1">
-      <a href="#" class="" target=""><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675959458/Doriane%20Chatelain/picto%20%28service%29/redaction_xbefuk.png" alt="" class="card1__img card1__img--full"></a>
+      <img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675959458/Doriane%20Chatelain/picto%20%28service%29/redaction_xbefuk.png" alt="" class="card1__img card1__img--full"></a>
       <h4 class="card1__title">Redaction</h4>
       <p>The art and the way to highlight your brand through words.</p>
     </li>
     <li class="card1">
-      <a href="#" class="" target=""><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675959457/Doriane%20Chatelain/picto%20%28service%29/photos_oyspmy.png" alt="" class="card1__img card1__img--full"></a>
+      <img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675959457/Doriane%20Chatelain/picto%20%28service%29/photos_oyspmy.png" alt="" class="card1__img card1__img--full"></a>
       <h4 class="card1__title">Photography</h4>
       <p>Use my passion for photography to highlight your product.</p>
     </li>
     <li class="card1">
-      <a href="#" class="" target=""><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675959458/Doriane%20Chatelain/picto%20%28service%29/video_ciqdlw.png" alt="" class="card1__img card1__img--full"></a>
+      <img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675959458/Doriane%20Chatelain/picto%20%28service%29/video_ciqdlw.png" alt="" class="card1__img card1__img--full"></a>
       <h4 class="card1__title">Videography</h4>
       <p>Highlighting your product or your place through a video for your networks will give a new dimension to your brand.</p>
     </li>
     <li class="card1">
-      <a href="#" class="" target=""><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675959456/Doriane%20Chatelain/picto%20%28service%29/evenementiel_m3uhuu.png" alt="" class="card1__img card1__img--full"></a>
+      <img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675959456/Doriane%20Chatelain/picto%20%28service%29/evenementiel_m3uhuu.png" alt="" class="card1__img card1__img--full"></a>
       <h4 class="card1__title">Event</h4>
       <p>From the small event to the big congress, I can be your shoulder to accompany you in the organization of your project.</p>
     </li>
     <li class="card1">
-      <a href="#" class="" target=""><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675959457/Doriane%20Chatelain/picto%20%28service%29/traduction_r9fagi.png" alt="" class="card1__img card1__img--full"></a>
+      <img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675959457/Doriane%20Chatelain/picto%20%28service%29/traduction_r9fagi.png" alt="" class="card1__img card1__img--full"></a>
       <h4 class="card1__title">Translation</h4>
       <p>Fluent in French, Spanish and English, I can be an important tool if you want to translate your website and reach a larger target.</p>
     </li>
@@ -93,7 +93,19 @@
       <%# <h4 class="card__title"><a href="#" class="" target="_blank">LadyBird</a></h4> %>
     </li>
     <li class="card">
-      <a href="#0" role="button" data-target="#modal9" data-toggle="modal"><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675957573/Doriane%20Chatelain/logo%20client%20%28realisation%29/4EVENT_ttvqdy.png" alt="" class="card__img card__img--full"></a>
+    <a href="#0" role="button" data-target="#modal9" data-toggle="modal"><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1675957573/Doriane%20Chatelain/logo%20client%20%28realisation%29/4EVENT_ttvqdy.png" alt="" class="card__img card__img--full"></a>
+      <%# <h4 class="card__title"><a href="#" class="" target="_blank">LadyBird</a></h4> %>
+    </li>
+    <li class="card">
+      <a href="#0" role="button" data-target="#modal10" data-toggle="modal"><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1676218954/Doriane%20Chatelain/personal_creation_mmcuzi.png" alt="" class="card__img card__img--full"></a>
+      <%# <h4 class="card__title"><a href="#" class="" target="_blank">LadyBird</a></h4> %>
+    </li>
+    <li class="card">
+      <a href="#0" role="button" data-target="#modal11" data-toggle="modal"><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1676219099/Doriane%20Chatelain/VIDE_dazzxo.png" alt="" class="card__img card__img--full"></a>
+      <%# <h4 class="card__title"><a href="#" class="" target="_blank">LadyBird</a></h4> %>
+    </li>
+    <li class="card">
+      <a href="#0" role="button" data-target="#modal12" data-toggle="modal"><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1676219099/Doriane%20Chatelain/VIDE_dazzxo.png" alt="" class="card__img card__img--full"></a>
       <%# <h4 class="card__title"><a href="#" class="" target="_blank">LadyBird</a></h4> %>
     </li>
   </ul>
@@ -249,6 +261,29 @@
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1676198197/Doriane%20Chatelain/plaquettes/PLAQUETTE%20REVES/plaquette_reves_q0vpfp.png" alt="" class="">
+            </div>
+          </div>
+            <div class="swiper-pagination"></div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+        </div>
+      </div>
+      <div class="modal-footer">
+        <a href="#0" class="btn btn-close" role="button" data-dismiss="dialog"></a>
+      </div>
+    </div>
+  </div>
+  <div class="modal" id="modal10" role="dialog">
+    <div class="modal-content">
+      <div class="cardpage">
+        <p></p>
+        <div class="swiper">
+          <div class="swiper-wrapper">
+            <div class="swiper-slide">
+              <img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1676219421/Doriane%20Chatelain/plaquettes/PLAQUETTE%20PERSO/1_qyw0ac.png" alt="" class="">
+            </div>
+            <div class="swiper-slide">
+              <img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1676219421/Doriane%20Chatelain/plaquettes/PLAQUETTE%20PERSO/2_mkhrgz.png" alt="" class="">
             </div>
           </div>
             <div class="swiper-pagination"></div>
