--- a/app/assets/stylesheets/components/_realisation.scss
+++ b/app/assets/stylesheets/components/_realisation.scss
@@ -58,7 +58,8 @@ hr{
     border-radius: 0px;
     transition: box-shadow 250ms;
     border: none;
-    opacity: 0.2;
+    opacity: 0.5;
+    background-color: #FBF9F9;
     &:hover{
       -ms-transform: scale(1.1); /* IE 9 */
       -webkit-transform: scale(1.1); /* Safari 3-8 */
@@ -76,6 +77,7 @@ hr{
       object-fit: cover;
       width: 100%;
       height: auto;
+      background-color: white;
 
       &:hover{
 
