--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -3,7 +3,7 @@
   display: flex;
   justify-content: space-between;
   padding: 20px 0 10px 0;
-  background-color: #F8F9FA;
+  background-color: #FBF9F9;
   p{
     color: #B6D7E5;
     opacity: 0.8;
