--- a/app/assets/stylesheets/components/_service.scss
+++ b/app/assets/stylesheets/components/_service.scss
@@ -1,5 +1,5 @@
 .service{
-  background-color: white;
+  background-color: #FBF9F9;
   &__title{
     padding-top: 80px;
     font-family: "Proxima Nova", sans-serif;
@@ -57,6 +57,7 @@ hr{
     transition: box-shadow 250ms;
     border: none;
     padding-top: 20px;
+    background-color: #FBF9F9;
 
     &__title{
       margin: 20px;
