--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -303,13 +303,14 @@
     Since my birth I have been immersed in this double culture which allows me today to have an ease in languages ​​and a great open-mindedness.
     <br><br>
     After obtaining a degree in Communication Manager and then having worked in events for 4 years, I decided to stand on my own feet by using my know-how to help companies develop.
+    <br><br>
+    Do you have a project ? Let me know.
   </p>
-
 </div>
-<div class="container separation" id="work">
+<%# <div class="container separation" id="work">
   <p>Do you have a project ? Let me know. </p>
   <%# <a href="https://www.malt.fr/profile/teddymuller" class="btn-malt" target="_blank">Malt!</a> %>
-</div>
+<%# </div> %>
 
 <script>
   window.onload = () => {
