search with logo

--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -3,8 +3,7 @@
   <div class="container nav">
     <div class="item-ted">
       <ul>
-        <li><a href="#teddymuller" class="bouton"><strong>Doriane CHATELAIN</strong><br>Lady Bird</a></li>
-
+        <li><a href="#teddymuller" class="bouton"><img src="https://res.cloudinary.com/dezfv3vmn/image/upload/v1676224171/Doriane%20Chatelain/lady_bird_logo_lohost.png" alt="" class="avatar-lady"></a></li>
       </ul>
     </div>
     <div class="item item--menu">
