--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -53,7 +53,7 @@
   .btn-menu{
     color: #B6D7E5;
     border: none;
-    background-color: #F8F9FA;
+    background-color: #F7F3F4;
     font-size: 25px;
     @media screen and (min-width: 768px){
       display: none;
@@ -73,7 +73,7 @@
   .menu-open {
     display: block;
     li{
-      color: white;
+      color: #F7F3F4;
     }
   }
   // .menu li{
