--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -12,7 +12,7 @@
         <li><a href="mailto:ladybirdbydc@gmail.com?subject=Contact WEBSITE" target="_blank"><i class="fa-solid fa-envelope"></i></a></li>
         <%# <li><a href="https://github.com/M-Teddy/" target="_blank"><i class="fab fa-github"></i></a></li> %>
         <li><a href="https://www.instagram.com/ladybird_bydc/" id="insta" target="_blank"><i class="fab fa-instagram"></i></a></li>
-        <li><a href="#" class="facebook"><i class="fab fa-facebook" target="_blank"></i></a></li>
+        <li><a href="https://www.facebook.com/doriane.chatelain" class="facebook" target="_blank"><i class="fab fa-facebook"></i></a></li>
         <%# <li><a href="#" class="twitter"><i class="fab fa-twitter" target="_blank"></i></a></li> %>
         <li><a href="https://www.linkedin.com/in/dorianechatelain/" class="linkedin" target="_blank"><i class="fab fa-linkedin"></i></a></li>
       </ul>
